<resources>
    <string name="app_name">SofaScoreHW</string>
    <string name="button_add">Add</string>
    <string name="button_list">List</string>
    <string name="fragment_album">Album name: </string>
    <string name="fragment_band">Band name: </string>
    <string name="fragment_genre">Genre: </string>
    <string name="fragment_single">Single: </string>
    <string name="fragment_count">Song count: </string>
    <string name="fragment_type">Type: </string>
    <string name="radio_ep">EP </string>
    <string name="radio_lp">LP </string>
    <string name="fragment_country">Country: </string>
    <string name="fragment_city">City: </string>
    <string name="fragment_sold">Copies Sold: </string>
    <string name="fragment_img">Image URL: </string>
    <string name="fragment_year">Year: </string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_add">Add</string>
    <string name="title_albums">Albums</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="settings">Settings</string>
    <string name="page_title">SofaScoreHW</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="favorite_header">My Cities</string>
    <!-- Preference Titles -->
    <string name="languages_header">Language</string>
    <string name="sync_header">Sync</string>

    <!-- Languages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Language</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- City UI -->
    <string name="min_max">Min / Max</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="accuracy">Accuracy</string>
    <string name="next_days">Next 5 days</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="type_of_unit">Choose type of unit</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="about_title">About</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="about_btn">More Info</string>
    <string name="btn_clear_fav">Clear my Cities List</string>
    <string name="btn_clear_rec">Clear Recent Search List</string>

    <!-- About -->
    <string name="sofascore_academy">SofaScore Android Academy</string>
    <string name="class_2021">Class 2021</string>
    <string name="app_name_lable">App Name</string>
    <string name="app_name_real">Frenkie\'s WeatherApp</string>
    <string name="api_credit_label">API Credit</string>
    <string name="api_credit">metaweather</string>
    <string name="developer_label">Developer</string>
    <string name="developer">Karlo Franić</string>

    <!-- Dialog -->
    <string name="dialog_title_fav">Clear favorite list?</string>
    <string name="dialog_title_rec">Clear recent search list?</string>
    <string name="dialog_text_fav">If you clear your favorite list, your favorite screen will be empty.</string>
    <string name="dialog_text_rec">If you clear your recent search list, your home screen will be empty.</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
</resources>