<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/surface_1"
    android:background="@color/surface_1">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/favorite_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/favorite_title"
                android:layout_width="176dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="160dp"
                android:text="@string/settings_title"
                style="@style/Headline2Surface1Left" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_lang"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:hint="Language"
        app:boxBackgroundColor="@color/surface_2"
        android:textColorHint="@color/tint_secondary"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:hintTextColor="@color/tint_secondary">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:fontFamily="sans-serif"
            style="@style/InputTextDarkLeft"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:hint="City"
        app:boxBackgroundColor="@color/surface_2"
        android:textColorHint="@color/tint_secondary"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:hintTextColor="@color/tint_secondary">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:fontFamily="sans-serif"
            style="@style/InputTextDarkLeft"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/metrics_rectange" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/AssistiveColdGrayLeft"
            android:text="@string/type_of_unit"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/tint_secondary"
            android:text="@string/metric"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/tint_secondary"
            android:text="@string/imperial"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/metrics_rectange">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/about_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Headline2DarkLeft"
            android:text="@string/about_title" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            app:layout_constraintBottom_toTopOf="@+id/btn_info"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/BodyDarkLeft"
            android:text="@string/about_text" />
        
        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="263dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/about_btn"
            android:textColor="@color/tint_secondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/delete_favorites_list_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/error"
        android:background="@drawable/error_btn_rectangle"
        android:textColor="@color/error"
        android:text="@string/btn_clear_fav" />

    <Button
        android:id="@+id/delete_recent_list_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/error"
        android:background="@drawable/error_btn_rectangle"
        android:textColor="@color/error"
        android:text="@string/btn_clear_rec" />

</LinearLayout>